mail templates + projects
