# docs/swagger.yaml
@@ -35,6 +35,19 @@ definitions:
       title:
         type: string
     type: object
+  repository.Project:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      link:
+        type: string
+      preview:
+        type: string
+      title:
+        type: string
+    type: object
   repository.Setting:
     properties:
       id:
@@ -64,7 +77,7 @@ definitions:
       success:
         type: boolean
     type: object
-host: 192.168.2.68:9000
+host: localhost:9000
 info:
   contact: {}
   title: Advent Calendar API docs
@@ -222,6 +235,130 @@ paths:
             type: array
       tags:
       - Days
+  /api/projects:
+    get:
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/repository.Project'
+            type: array
+      tags:
+      - Projects
+    post:
+      parameters:
+      - description: Authorization
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - in: formData
+        minLength: 5
+        name: description
+        required: true
+        type: string
+      - in: formData
+        name: link
+        required: true
+        type: string
+      - in: formData
+        minLength: 5
+        name: title
+        required: true
+        type: string
+      - description: ' '
+        in: formData
+        name: preview
+        type: file
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/validators.GlobalHandlerResp'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/validators.GlobalHandlerResp'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/validators.GlobalHandlerResp'
+      tags:
+      - Projects
+  /api/projects/{id}:
+    delete:
+      parameters:
+      - description: Authorization
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: ' '
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/validators.GlobalHandlerResp'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/validators.GlobalHandlerResp'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/validators.GlobalHandlerResp'
+      tags:
+      - Projects
+    put:
+      parameters:
+      - description: Authorization
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: ' '
+        in: path
+        name: id
+        required: true
+        type: integer
+      - in: formData
+        minLength: 5
+        name: description
+        required: true
+        type: string
+      - in: formData
+        name: link
+        required: true
+        type: string
+      - in: formData
+        minLength: 5
+        name: title
+        required: true
+        type: string
+      - description: ' '
+        in: formData
+        name: preview
+        type: file
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/validators.GlobalHandlerResp'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/validators.GlobalHandlerResp'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/validators.GlobalHandlerResp'
+      tags:
+      - Projects
   /api/settings:
     get:
       parameters:
